slides background update

--- a/docs/slides/presentation.dl.tex
+++ b/docs/slides/presentation.dl.tex
@@ -20,7 +20,6 @@
 % \usepackage[T1]{fontenc}
 
 
-
 \usepackage{tikz}
 \usetikzlibrary{calc,shapes,shadows}
 \usetikzlibrary{fadings}
@@ -137,7 +136,6 @@
 \institute{Department of Electronic Engineering \\{\bf University of Birmingham}}
 
 
-% \lhead{XV Symposium of Mexican Studies and Students in the United Kingdom}
 
 %--------------------------------------------------------------------------
 % Notes settings
@@ -152,8 +150,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \licenseframe{https://github.com/librerobotics/deeplearning}
 
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% \maketitle
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\maketitle
+\closingtitle
 
 
 
@@ -194,7 +195,6 @@
 
 \section{Deep Learning}
 
-
 \subsection{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \imageframe[caption=Convolutional Neural Network]{/dl_intro/figure}
@@ -203,7 +203,6 @@
 \subsection{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \imageframe[caption=idein]{/dl_idein/figure}
-
 
 
 \subsection{}
@@ -237,45 +236,16 @@
 
 
 
-\section{Child-Robot Interactions [CHRIS]}
-
+\section{Child-Robot Interactions (CHRIS)}
 
 \subsection{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\imageframe[caption=Examples of CHRIS]{/child-robot-interaction/figure}
+\imageframe[caption=Examples of Child-Robot Interactions (CHRIS)]{/child-robot-interaction/figure}
 
 
 
 \section{}
 
-
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% {
-%     \fullbackground[color=black]{eeg-headset}
-%
-% \begin{frame}[plain]
-%
-%     \vspace{8cm}
-%
-% \setbeamercolor{hriSec1Demo}{fg=white!70!black}
-%
-% \begin{beamercolorbox}[wd=\linewidth,ht=6ex,dp=0.7ex]{hriSec1Demo}
-%     \textbf{Gracias }\\
-%     \scriptsize
-%     Miguel P. Xochicale\\
-%     {\tt \href{http://mxochicale.github.io/}{[http://mxochicale.github.io/]}  }
-%     \href{https://twitter.com/_mxochicale}{[\faTwitter@\_mxochicale]}
-%     \href{https://github.com/mxochicale}{[\faGithub@mxochicale]}
-% \end{beamercolorbox}
-%     \vfill
-% \end{frame}
-% }
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\closingtitle
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -290,6 +260,12 @@
 
     \end{thebibliography}
 \end{frame}
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\closingtitle
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
