--- a/docs/slides/presentation.dl.tex
+++ b/docs/slides/presentation.dl.tex
@@ -129,7 +129,7 @@
 %--------------------------------------------------------------------------
 % General presentation settings
 %--------------------------------------------------------------------------
-\title{Teaching Deep Learning with \\  Low-Cost Educational Robots}
+\title{Teaching Deep Learning with \\  Low-Cost Robots}
 \subtitle{Emerging Technologies}
 % \date{-- {\bf March 2018}}
 \author{Miguel P Xochicale}
@@ -170,68 +170,37 @@
 
 \subsection{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\imageframe[caption=V00MAY2014]{/robots/V00MAY2014}
+\imageframe[caption=V00-V03]{/robots/V00-V03}
+
+\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	\imageframe[caption=V04-DEC2017]{/robots/V04DEC2017}
+
+
+
+
+\section{What is Deep Learning?}
+
+\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\imageframe[caption=Introduction to Deep Learning]{/dl_intro/figure-mldl}
+
+\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\imageframe[caption=Convolutional Neural Network]{/dl_intro/figure-cnn}
 
 
 \subsection{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\imageframe[caption=V01JUNE2014]{/robots/V01JUNE2014}
+\imageframe[caption=idein:raspberrypi3/pizero that recongises images]{/dl_idein/figure}
 
 
 \subsection{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\imageframe[caption=V02JULY2014]{/robots/V02JULY2014}
-
-\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\imageframe[caption=V03APRIL2016]{/robots/V03APRIL2016}
-
-\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\imageframe[caption=V04DEC2017]{/robots/V04DEC2017}
+\imageframe[caption=BerryNet:raspberrypi3 that recognises multiple objects]{/dl_berrynet/figure}
 
 
 
-
-\section{Deep Learning}
-
-\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\imageframe[caption=Convolutional Neural Network]{/dl_intro/figure}
-
-
-\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\imageframe[caption=idein]{/dl_idein/figure}
-
-
-\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\imageframe[caption=BerryNet]{/dl_berrynet/figure}
-
-
-
-
-\section{Work in Progress}
-
-
-\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-{
-\begin{frame}{TODO List}
-
-
-          \begin{itemize}
-              \item A. Implement a CNN on Raspberry using the pi camera
-              \item B. Implement a CNN for facial expressions
-              \item C. Control the servo motors
-              \item ...
-              \item X. Fuse A, B and C for the final demo!
-          \end{itemize}
-
-        \badge{/badge/logo_badge}
-\end{frame}
-}
 
 
 
@@ -240,8 +209,42 @@
 
 \subsection{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\imageframe[caption=Examples of Child-Robot Interactions (CHRIS)]{/child-robot-interaction/figure}
+\imageframe[caption=Mexican Children Schools]{/child-robot-interaction/figure-mex}
 
+\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\imageframe[caption=CHild-Robot InteractionS (CHRIS)]{/child-robot-interaction/figure-chris}
+
+\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\imageframe[caption=]{/child-robot-interaction/figure-er}
+
+
+
+
+\section{Work in Progress}
+
+\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+{
+\begin{frame}{TODO List}
+
+
+          \begin{enumerate}
+              \item Implement a CNN on Raspberry using the pi camera
+              \item Implement a CNN for facial expressions
+              \item Control the servo motors 
+              \item Integrate 1,2, and 3 [February2018] \\ 
+	      \item Demo presentation [March2018]
+          \end{enumerate}
+
+%\badge{/badge/logo_badge}
+\end{frame}
+}
+
+%\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\imageframe[caption=]{/mexico/figure-mex}
 
 
 \section{}
@@ -253,10 +256,20 @@
     \begin{thebibliography}{10}
 
 \beamertemplatearticlebibitems
-  \bibitem{A2009}
-       A B.
-      \newblock \doublequoted{title}
-      \newblock conference, year. [\href{https:// github.com/}{\faGithub}]
+  \bibitem{Ho2016}
+      Jostine Ho       
+      \newblock \doublequoted{Facial Emotion Recognition}
+      \newblock GitHub repository (2016), https:// github.com/JostineHo/mememoji [\href{https:// github.com/JostineHo/mememoji}{\faGithub}]
+
+  \bibitem{Idein Inc}
+	Idein Inc.
+	\newblock Demo: Accelerate Deep Learning Inference on Raspberry Pi
+	\newblock Youtube video: https://www.youtube.com/watch?v=R5niixLtf2Q
+
+  \bibitem{BarryNet}
+	BarryNet
+	\newblock Deep learning gateway on Raspberry Pi
+	\newblock GitHub Repository (2017), https://github.com/DT42/BerryNet [\href{https://github.com/DT42/BerryNet}{\faGithub}]
 
     \end{thebibliography}
 \end{frame}
