improving docs/abstract/latex

--- a/docs/abstract/latex/abstract.tex
+++ b/docs/abstract/latex/abstract.tex
@@ -4,12 +4,13 @@
 
 
 \author{Miguel P Xochicale\\
-miguelpxochicale at gmail dot com\\
+%miguelpxochicale at gmail dot com\\
 School of Engineering\\
-Department of Electronic, Electric and System Engineering\\
+%Department of Electronic, Electric and System Engineering\\
 University of Birmingham, UK}
 % \title{Educational Robots for Deep Learning} %(Thursday, 7th December 2017)
-\title{Teaching Deep Learning  \\ with Low-Cost Educational Robots} %(Friday, 8th December 2017)
+%\title{Teaching Deep Learning  \\ with Low-Cost Educational Robots} %(Friday, 8th December 2017)
+\title{Teaching Deep Learning  \\ with Low-Cost Robots} %(Friday, 19 january 2018)
 
 \date{\today}
 
@@ -20,28 +21,30 @@ University of Birmingham, UK}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Why your idea is innovate?
 Deep Learning (DL) is a branch of machine learning in Artificial Intelligence
-which essentially takes advantage of huge datasets to train neural networks.
-Then the algorithms developed in DL are, for instance, applied for self-driving cars,
-for playing go against top players or for face emotion recognition. The great
-impact of DL in recent years is also because of improvements in hardware development and
-mainly because of open source tools and libraries \cite{matelabs2017}.
-Additionally, there is a huge range of applications in areas such as robotics,
-transportation, medicine and last but not least education.
+which essentially takes advantage of a huge datasets to train neural networks.
+Then the algorithms developed in DL are, for instance, applied in self-driving cars,
+games to play go against top players or in face emotion recognition to mention but 
+a few. 
+The great impact of DL in recent years is also because of improvements in 
+hardware development and mainly because of open source tools and libraries \cite{matelabs2017}.
+Additionally to that, there is a huge range of applications in areas such as robotics,
+transportation, medicine and last but not least in education.
 With this in mind, we propose to use a raspberry pi, a $\pounds$30 board with
-GNU/Linux OS, connected with arduino board, servomotors and pi camera in order
-to create a simple low cost educational robot where children can learn the basics
-concepts of deep learning  \cite{durr2015}.
-The education robot will be able to perform some examples of architectures of
+GNU/Linux OS, connected with a mini arduino board, $\pounds$2 board,  servomotors 
+and pi camera in order to create a simple low-cost educational robot 
+where children can learn the basics concepts of deep learning  \cite{durr2015}.
+Our general aim with the education robot is to perform some examples of 
 convolutional neural networks to recognise six basic emotions:
-happy, sad, surprise, fear, anger and neutral \cite{ho2016, Ruiz-Garcia2016}.
-Therefore, with many didactic activities children can interact with the educational
-robot and learn concepts of robotics, linear algebra, machine learning and deep learning.
+happy, sad, surprise, fear, anger and neutral \cite{ho2016, Ruiz-Garcia2016}
+in order to control the robot. For which, thought many didactic activities 
+children can interact with the robot and learn concepts of robotics, linear algebra, 
+machine learning, and deep learning.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % In which are your idea will make an impact?
-We believe that teaching deep learning with an educational robot can create
-both economical and pedagogical impact where children will be persuaded to work
-towards the creation of better living conditions to anyone, anywhere.
+We believe that teaching deep learning with low-cost robots can create
+both economical and pedagogical impact and children will be persuaded to work
+towards the creation of better living conditions to anyone, anywhere in the world.
 
 
 \bibliography{references}
