docs/slides -- update N03

--- a/docs/slides/presentation.air4children.tex
+++ b/docs/slides/presentation.air4children.tex
@@ -201,7 +201,7 @@ and Robotics for Children}
 
 
 
-\section{Low-Cost Educational Robot}
+\section{Open-Source Educational Robot}
 
 \subsection{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -227,6 +227,17 @@ and Robotics for Children}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \imageframe[caption=Teaching AIR4children]{/child-robot-interaction/figure-chris}
 
+
+
+\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\imageframe[caption=Robit Mecate 2015 (https://youtu.be/VjVGnwD422g)]{/child-robot-interaction/figure-robit}
+
+
+
+
+
+
 \subsection{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \imageframe[caption=]{/child-robot-interaction/figure-er}
@@ -236,14 +247,12 @@ and Robotics for Children}
 
 
 
-\section{Conclusions}
+\section{Final Remarks}
 
 \subsection{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 {
-\begin{frame}{LibrE Robotics is aiming to:}
-
-
+\begin{frame}{AIR4children is aiming to:}
 
 * Build a Mexican Open-Source Robot that is:
 \begin{itemize}
@@ -252,18 +261,14 @@ and Robotics for Children}
 	\item Fun!
 \end{itemize}
 
-* Create an inclusive community where children and person of any age can
+* Create an inclusive community where children and persons of any age can
 learn and share knowledge of Artificial Intelligence and
 Robotics for free!
 
-
-* Create a self-sustainable community where their
+* Create a self-sustainable community where
 members will make their best to help 
-children finding their potential and with Children 
-would be able to build a better community through 
-the application of AI and Robotics! 
-
-
+children finding their potential 
+through the use of AI and Robotics! 
 
 %\badge{/badge/logo_badge}
 \end{frame}
