docs/slides -- update N04 -- 23DEC2019

--- a/docs/slides/presentation.air4children.tex
+++ b/docs/slides/presentation.air4children.tex
@@ -135,7 +135,6 @@ and Robotics for Children}
 \subtitle{Emerging Technologies}
 % \date{-- {\bf March 2018}}
 \author{Libre Robotics}
-%\author{Miguel Xochicale}
 \institute{Department of \\{\bf University of }}
 
 
@@ -165,9 +164,128 @@ and Robotics for Children}
 %--------------------------------------------------------------------------
 % Content
 %--------------------------------------------------------------------------
-% \section{Introduction}
 
 
+
+\section{Why? What? How?}
+
+
+
+\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+{
+\begin{frame}{WHY?}
+
+Why AIR is important for children and community of Xicohtzinco?
+
+* Aware children and parents on the use and applications of AIR \\ 
+* Create a community where children can freely take AIR  \\   
+* Helping their community proposing solutions with AIR    \\
+
+
+
+
+%\badge{/badge/logo_badge}
+\end{frame}
+}
+
+
+
+\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+{
+\begin{frame}{WHAT?}
+
+* Build Mexican OpenSource Robots that are:
+\begin{itemize}
+        \item Affordable, 
+	\item Educational, and 
+	\item Fun!
+\end{itemize}
+
+* Create an inclusive community where children and persons of any age can
+learn and share knowledge of Artificial Intelligence and
+Robotics for free!
+
+* Create a self-sustainable community where
+members will make their best to help 
+children and others finding their potential 
+through the use of AI and Robotics! 
+
+%\badge{/badge/logo_badge}
+\end{frame}
+}
+
+
+
+\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+{
+\begin{frame}{WHO? and HOW?}
+
+
+* Finding founders for AIR   \\
+* Create the vision of AIR with plans for for one, two, five and ten years
+%* Create short and long term impact in the community   \\
+
+
+%\badge{/badge/logo_badge}
+\end{frame}
+}
+
+
+
+\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\imageframe[caption=Ghantt Chart]{/ghanttchards/pdf/drawing}
+
+
+
+\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+{
+\begin{frame}{Aim of AIR4Children}
+
+%* Nearly 2 out of 10 children have access to fundamentals of robotics,
+The aim of AIR4Children is to create a community for not only robotics but artificial intelligence 
+where anyone can freely learn and share knowledge.
+
+
+%\badge{/badge/logo_badge}
+\end{frame}
+}
+
+
+
+
+
+%
+%\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\imageframe[caption=Introduction to Deep Learning]{/dl_intro/figure-mldl}
+%
+%
+%
+
+
+
+%\section{Open-Source Educational Robot}
+
+\section{History}
+
+\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\imageframe[caption=Versions 00 to 03]{/robots/V00-V03}
+
+
+\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\imageframe[caption=Robit Mecate 2015 (https://youtu.be/VjVGnwD422g)]{/child-robot-interaction/figure-robit}
+
+
+\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	\imageframe[caption=Version 04 DEC2017]{/robots/V04DEC2017}
 
 
 
@@ -201,17 +319,6 @@ and Robotics for Children}
 
 
 
-\section{Open-Source Educational Robot}
-
-\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\imageframe[caption=Versions 00 to 03]{/robots/V00-V03}
-
-\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	\imageframe[caption=Version 04 DEC2017]{/robots/V04DEC2017}
-
-
 
 
 
@@ -226,12 +333,6 @@ and Robotics for Children}
 \subsection{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \imageframe[caption=Teaching AIR4children]{/child-robot-interaction/figure-chris}
-
-
-
-\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\imageframe[caption=Robit Mecate 2015 (https://youtu.be/VjVGnwD422g)]{/child-robot-interaction/figure-robit}
 
 
 
@@ -252,9 +353,9 @@ and Robotics for Children}
 \subsection{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 {
-\begin{frame}{AIR4children is aiming to:}
+\begin{frame}{Final Remarks}
 
-* Build a Mexican Open-Source Robot that is:
+* Build a Mexican Open-Source Robots that are:
 \begin{itemize}
         \item Affordable, 
 	\item Educational, and 
@@ -273,6 +374,15 @@ through the use of AI and Robotics!
 %\badge{/badge/logo_badge}
 \end{frame}
 }
+
+
+
+
+
+
+
+
+
 
 
 \section{}
@@ -309,6 +419,8 @@ through the use of AI and Robotics!
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \licenseframe{https://github.com/librerobotics/air4children}
+
+
 
 
 \end{document}
