--- a/docs/slides/style/beamerthemehri.sty
+++ b/docs/slides/style/beamerthemehri.sty
@@ -270,11 +270,11 @@
     \ifx\insertauthor\@empty%
     \else%
         {\usebeamerfont{author}\usebeamercolor[fg]{author}\insertauthor\par}%
-        {\usebeamerfont{author} \href{https://twitter.com/librerobotics}{\faTwitter @librerobotics}
-                                \href{https://github.com/librerobotics}{\faGithub @librerobotics} \par}%
+        {\usebeamerfont{author} \href{https://twitter.com/librerobotics}{\faTwitter @air4children}
+                                \href{https://github.com/librerobotics}{\faGithub @air4children} \par}%
         {\usebeamerfont{author} 
 				{\tt \href{https://sites.google.com/site/librerobotics}
-				{http://librerobotics.github.io}  
+				{http://air4children.github.io}  
 				}  
 	\par
 	}%
@@ -596,8 +596,8 @@
         \vspace{1em}
         \small You are free to reuse it and modify it as much as you want as long as\\
         \small (1) you mention
-        {\href{https://github.com/mxochicale}{Miguel Xochicale}}
-         as being the original author,\\
+        {\href{https://github.com/librerobotics}{Libre Robotics}}
+         as being the original author, and \\
         \small (2) you re-share your presentation under the same terms.\\
 
         \normalsize\vspace{1em}
