docs/slides -- update N05 -- 26JAN2020

--- a/docs/slides/presentation.air4children.tex
+++ b/docs/slides/presentation.air4children.tex
@@ -174,13 +174,13 @@ and Robotics for Children}
 \subsection{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 {
-\begin{frame}{WHY?}
+\begin{frame}{WHY? Artificial Intelligence and Robotics (AIR)}
 
 Why AIR is important for children and community of Xicohtzinco?
 
 * Aware children and parents on the use and applications of AIR \\ 
 * Create a community where children can freely take AIR  \\   
-* Helping their community proposing solutions with AIR    \\
+* Then such group will help their community proposing solutions with AIR    \\
 
 
 
@@ -196,7 +196,7 @@ Why AIR is important for children and community of Xicohtzinco?
 {
 \begin{frame}{WHAT?}
 
-* Build Mexican OpenSource Robots that are:
+* Build Mexican OpenSource Robots which are:
 \begin{itemize}
         \item Affordable, 
 	\item Educational, and 
@@ -223,9 +223,11 @@ through the use of AI and Robotics!
 {
 \begin{frame}{WHO? and HOW?}
 
-
+* People who want to change the future of Mexico \\  
 * Finding founders for AIR   \\
-* Create the vision of AIR with plans for for one, two, five and ten years
+* Create a solid and robust project \\
+* Create the vision of AIR with short and long term plans \\
+%for for one, two, five and ten years
 %* Create short and long term impact in the community   \\
 
 
@@ -237,23 +239,24 @@ through the use of AI and Robotics!
 
 \subsection{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\imageframe[caption=Ghantt Chart]{/ghanttchards/pdf/drawing}
-
-
-
-\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 {
 \begin{frame}{Aim of AIR4Children}
 
 %* Nearly 2 out of 10 children have access to fundamentals of robotics,
-The aim of AIR4Children is to create a community for not only robotics but artificial intelligence 
+The aim of AIR4Children is to create a community for not only in the area of robotics 
+but also in artificial intelligence 
 where anyone can freely learn and share knowledge.
 
 
 %\badge{/badge/logo_badge}
 \end{frame}
 }
+
+
+
+\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\imageframe[caption=Ghantt Chart]{/ghanttchards/pdf/drawing}
 
 
 
@@ -334,16 +337,13 @@ where anyone can freely learn and share knowledge.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \imageframe[caption=Teaching AIR4children]{/child-robot-interaction/figure-chris}
 
-
-
-
-
-
-\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\imageframe[caption=]{/child-robot-interaction/figure-er}
-
-
+%
+%
+%\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\imageframe[caption=]{/child-robot-interaction/figure-er}
+%
+%
 
 
 
@@ -353,9 +353,9 @@ where anyone can freely learn and share knowledge.
 \subsection{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 {
-\begin{frame}{Final Remarks}
+\begin{frame}{Let's Make it happen!}
 
-* Build a Mexican Open-Source Robots that are:
+* Build Mexican Open-Source Robots which are:
 \begin{itemize}
         \item Affordable, 
 	\item Educational, and 
@@ -388,7 +388,7 @@ through the use of AI and Robotics!
 \section{}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Bibliography}
+\begin{frame}{References}
     \begin{thebibliography}{10}
 
 \beamertemplatearticlebibitems
@@ -412,10 +412,10 @@ through the use of AI and Robotics!
 
 
 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\closingtitle
-
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\closingtitle
+%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \licenseframe{https://github.com/librerobotics/air4children}
