updates links on the slides

--- a/docs/slides/presentation.air4children.tex
+++ b/docs/slides/presentation.air4children.tex
@@ -149,7 +149,7 @@ and Robotics for Children}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\licenseframe{https://github.com/librerobotics/air4children}
+\licenseframe{https://github.com/air4children/slides}
 
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %\maketitle
@@ -418,8 +418,7 @@ through the use of AI and Robotics!
 %
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\licenseframe{https://github.com/librerobotics/air4children}
-
+\licenseframe{https://github.com/air4children/slides}
 
 
 
