--- a/docs/slides/style/beamerthemehri.sty
+++ b/docs/slides/style/beamerthemehri.sty
@@ -1,5 +1,6 @@
 % Name           : beamerthemehri.sty
-% Author         : Séverin Lemaignan (severin.lemaignan@epfl.ch)
+% Author	 : Miguel Xochicale (perez.xochicale@gmail.com)  
+% Author         : Séverin Lemaignan (severin.lemaignan@epfl.ch)  
 % Author         : Benjamin Weiss (benjamin.weiss@kreatiefton.de)
 % License        : This file may be distributed and/or modified under the
 %                  GNU Public License.
@@ -270,10 +271,10 @@
     \ifx\insertauthor\@empty%
     \else%
         {\usebeamerfont{author}\usebeamercolor[fg]{author}\insertauthor\par}%
-        {\usebeamerfont{author} \href{https://twitter.com/librerobotics}{\faTwitter @air4children}
-                                \href{https://github.com/librerobotics}{\faGithub @air4children} \par}%
+        {\usebeamerfont{author} \href{https://twitter.com/air4children}{\faTwitter @air4children}
+                                \href{https://github.com/air4children}{\faGithub @air4children} \par}%
         {\usebeamerfont{author} 
-				{\tt \href{https://sites.google.com/site/librerobotics}
+				{\tt \href{http://air4children.github.io}
 				{http://air4children.github.io}  
 				}  
 	\par
@@ -596,7 +597,7 @@
         \vspace{1em}
         \small You are free to reuse it and modify it as much as you want as long as\\
         \small (1) you mention
-        {\href{https://github.com/librerobotics}{Libre Robotics}}
+        {\href{https://github.com/air4children}{AIR4Children}}
          as being the original author, and \\
         \small (2) you re-share your presentation under the same terms.\\
 
